# Proxmox-MCP

./: .env.example  .gitignore  Dockerfile  NOTICE  README.md  docker-compose.homelab.yml  docker-compose.yml  pyproject.toml  secrets.local.json.example
.github/workflows/: ci.yml  distribution.yml  hardening.yml  release-candidate.yml
deploy/grafana/: proxmox-mcp-dashboard.json
deploy/kubernetes/: proxmox-mcp.yaml
docs/: architecture.md  database-schema.md  deployment.md  domain-pack-status.md  lab-runbook.md  mcp-schema.md  proxmox-compatibility.md  quickstart-homelab.md  release-candidate-notes.md  release-hardening.md  roadmap.md  security-model.md  testing-strategy.md  threat-model.md  tool-promotion-framework.md  tool-specification.md
docs/release-evidence/: compatibility-report.example.json  lab-evidence.example.json
migrations/: env.py
release-evidence/: artifact-manifest.json  ci-success.json  compatibility-report.json  distribution-summary.json  hardening-summary.json  lab-evidence.json  lab-junit.xml  lab-mutation-junit.xml  lab-preflight.json  lab-storage-node-junit.xml  lab-targeted-fix-junit.xml  lxc-template-plan.json  migration-validation.json  sbom.spdx.json  trivy-image-results.sarif
scripts/: bootstrap-homelab.ps1  bootstrap-homelab.sh  collect_lab_evidence.py  collect_release_evidence.py  emit_ci_summary.py  lab_preflight.py  lab_prepare_lxc_template.py  validate_release_evidence.py
tests/: test_audit.py  test_config.py  test_distribution_config.py  test_package.py  test_persistence.py  test_reliability.py  test_server.py
(+141 files in other folders)
